remove unused columns from the staff table